--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    concurrently : latest
   }
 }
